we got something here

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,23 @@
+html, body, #root {
+  background-color: lightskyblue;
+  color: black;
+  height: 100%;
+  font-family: monospace;
+  font-size: 23px;
+}
+
+h1, h2, h3, h4, h5 {
+  margin: .5em 0;
+}
+hr {
+  border: 1px dashed black;
+  opacity: 0.5;
+}
+
 .App {
-  text-align: center;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .App-logo {
@@ -9,7 +27,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  /* background-color: #282c34; */
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -30,4 +48,57 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.two-column {
+  width: 100%;
+  display: flex;
+  flex: 2;
+  /* align-items: center; */
+  justify-content: center;
+}
+
+.two-column > div {
+  /* width: 90vh; */
+  /* border: 1px solid black; */
+  width: 100%;
+  padding: 10px 50px;
+}
+
+.track-art {
+  max-height: 100%;
+  max-width: 100%;
+}
+
+#waveforms {
+  width: 1000px;
+  margin: auto;
+}
+
+
+.ws-player {
+  display: flex;
+  /* width: 100%; */
+  background-color: #eee;
+  padding: 10px;    
+  align-items: center;
+  justify-content: center;
+
+  margin-top: 30px;
+}
+
+
+.ws-player button {
+  height: 260px;
+  min-width: 260px;
+  font-size: 100px;
+  border: 1px solid grey;
+  margin: 20px;
+  cursor: pointer;
+  display: table-cell; vertical-align: middle;
+  position:relative;
+  top: 10px;
+}
+.ws-player button:focus {
+  outline: 0;
 }
